--- a/index.html
+++ b/index.html
@@ -39,81 +39,90 @@ input, button { width:90%; padding:10px; margin:6px 0; font-size:16px; }
 <script src="https://www.gstatic.com/firebasejs/10.12.2/firebase-database-compat.js"></script>
 
 <script>
-const firebaseConfig = {
-  databaseURL: "https://nhutvan5c-79ce9-default-rtdb.asia-southeast1.firebasedatabase.app/"
-};
-firebase.initializeApp(firebaseConfig);
-const db = firebase.database();
+document.addEventListener("DOMContentLoaded", function() {
+  const firebaseConfig = {
+    databaseURL: "https://nhutvan5c-79ce9-default-rtdb.asia-southeast1.firebasedatabase.app/"
+  };
+  firebase.initializeApp(firebaseConfig);
+  const db = firebase.database();
 
-let myName, roomName, myPass, isCreator=false;
+  let myName, roomName, myPass, isCreator=false;
 
-document.getElementById("create").onclick = async ()=>{
-  myName = name.value.trim();
-  roomName = room.value.trim();
-  myPass = pass.value.trim();
-  if(!myName || !roomName || !myPass) return alert("Nhập đủ thông tin!");
-  const rRef = db.ref("rooms/"+roomName);
-  const snap = await rRef.get();
-  if(snap.exists()) return alert("Phòng đã tồn tại!");
-  await rRef.set({ password: myPass, messages: {} });
-  isCreator=true;
-  startChat();
-};
+  const log = console.log; // để debug nếu cần
 
-document.getElementById("join").onclick = async ()=>{
-  myName = name.value.trim();
-  roomName = room.value.trim();
-  myPass = pass.value.trim();
-  if(!myName || !roomName || !myPass) return alert("Nhập đủ thông tin!");
-  const rRef = db.ref("rooms/"+roomName);
-  const snap = await rRef.get();
-  if(!snap.exists()) return alert("Phòng không tồn tại!");
-  if(snap.val().password !== myPass) return alert("Sai mật khẩu!");
-  startChat();
-};
+  document.getElementById("create").onclick = async ()=>{
+    myName = name.value.trim();
+    roomName = room.value.trim();
+    myPass = pass.value.trim();
+    if(!myName || !roomName || !myPass) return alert("Nhập đủ thông tin!");
 
-function startChat(){
-  login.style.display="none";
-  chat.style.display="block";
-  roomTitle.textContent="Phòng: "+roomName;
-  loadMessages();
-}
+    const rRef = db.ref("rooms/"+roomName);
+    const snap = await rRef.get();
+    if(snap.exists()) return alert("Phòng đã tồn tại!");
 
-document.getElementById("send").onclick = async ()=>{
-  const text = msgBox.value.trim();
-  if(!text) return;
-  const msgRef = db.ref("rooms/"+roomName+"/messages");
-  await msgRef.push({
-    sender: myName,
-    text: text,
-    time: new Date().toLocaleString()
-  });
-  msgBox.value="";
-};
+    await rRef.set({ password: myPass, messages: {} });
+    isCreator=true;
+    alert("✅ Phòng đã tạo thành công!");
+    startChat();
+  };
 
-function loadMessages(){
-  const msgRef = db.ref("rooms/"+roomName+"/messages");
-  msgRef.on("value", (snap)=>{
-    messages.innerHTML="";
-    snap.forEach(child=>{
-      const m=child.val();
-      const div=document.createElement("div");
-      div.className="msg";
-      div.innerHTML=`<span class='${m.sender===myName?"me":"you"}'>${m.sender}:</span> ${m.text}`;
-      messages.appendChild(div);
-    });
-    messages.scrollTop=messages.scrollHeight;
-  });
-}
+  document.getElementById("join").onclick = async ()=>{
+    myName = name.value.trim();
+    roomName = room.value.trim();
+    myPass = pass.value.trim();
+    if(!myName || !roomName || !myPass) return alert("Nhập đủ thông tin!");
+    const rRef = db.ref("rooms/"+roomName);
+    const snap = await rRef.get();
+    if(!snap.exists()) return alert("Phòng không tồn tại!");
+    if(snap.val().password !== myPass) return alert("Sai mật khẩu!");
+    alert("✅ Đã vào phòng thành công!");
+    startChat();
+  };
 
-document.getElementById("deleteRoom").onclick = async ()=>{
-  if(!isCreator) return alert("Chỉ người tạo phòng mới được xoá!");
-  if(confirm("Bạn chắc chắn muốn xoá phòng này?")){
-    await db.ref("rooms/"+roomName).remove();
-    alert("Đã xoá phòng!");
-    location.reload();
+  function startChat(){
+    document.getElementById("login").style.display="none";
+    document.getElementById("chat").style.display="block";
+    document.getElementById("roomTitle").textContent="Phòng: "+roomName;
+    loadMessages();
   }
-};
+
+  document.getElementById("send").onclick = async ()=>{
+    const text = msgBox.value.trim();
+    if(!text) return;
+    const msgRef = db.ref("rooms/"+roomName+"/messages");
+    await msgRef.push({
+      sender: myName,
+      text: text,
+      time: new Date().toLocaleString()
+    });
+    msgBox.value="";
+  };
+
+  function loadMessages(){
+    const msgRef = db.ref("rooms/"+roomName+"/messages");
+    msgRef.on("value", (snap)=>{
+      const messages = document.getElementById("messages");
+      messages.innerHTML="";
+      snap.forEach(child=>{
+        const m=child.val();
+        const div=document.createElement("div");
+        div.className="msg";
+        div.innerHTML=`<span class='${m.sender===myName?"me":"you"}'>${m.sender}:</span> ${m.text}`;
+        messages.appendChild(div);
+      });
+      messages.scrollTop=messages.scrollHeight;
+    });
+  }
+
+  document.getElementById("deleteRoom").onclick = async ()=>{
+    if(!isCreator) return alert("Chỉ người tạo phòng mới được xoá!");
+    if(confirm("Bạn chắc chắn muốn xoá phòng này?")){
+      await db.ref("rooms/"+roomName).remove();
+      alert("Đã xoá phòng!");
+      location.reload();
+    }
+  };
+});
 </script>
 </body>
 </html>
